--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 				<!-- NOTE: We don't need a groupId specification because the group is 
 					org.apache.maven.plugins ...which is assumed by default. -->
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2-beta-5</version>
+				<version>2.6</version>
 				<executions>
 					<execution>
 						<id>assemble-jar-with-dependencies</id>
